[tool.poetry]
name = "siennachartsbot"
version = "0.1.0"
description = "Bot de Telegram"
authors = ["Tu Nombre <tu_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^21.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
