[tool.poetry]
name = "siennachartsbot"
version = "0.1.0"
description = "Bot para grupo de Telegram: SiennaCharts"
authors = ["Dani G.D. <danigd71@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"